tests/baselines/reference/decoratorOnClassProperty13.errors.txt
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty13.ts(4,5): error TS1208: Decorators may not change the type of a member.
  Type 'TypedPropertyDescriptor<number>' is not assignable to type 'void | TypedPropertyDescriptor<string>'.
    Type 'TypedPropertyDescriptor<number>' is not assignable to type 'TypedPropertyDescriptor<string>'.
      Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/decorators/class/property/decoratorOnClassProperty13.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<number>;
    
    class C {
        @dec prop: string;
        ~~~~
!!! error TS1208: Decorators may not change the type of a member.
!!! error TS1208:   Type 'TypedPropertyDescriptor<number>' is not assignable to type 'void | TypedPropertyDescriptor<string>'.
!!! error TS1208:     Type 'TypedPropertyDescriptor<number>' is not assignable to type 'TypedPropertyDescriptor<string>'.
!!! error TS1208:       Type 'number' is not assignable to type 'string'.
    }